2009-01-07  Michal Ludvig  <michal@logix.cz>

	* S3/ACL.py: New object for handling ACL issues.
	* S3/S3.py: Moved most of S3.get_acl() to ACL class.
	* S3/Utils.py: Reworked XML helpers - remove XMLNS before 
	  parsing the input XML to avoid having all Tags prefixed
	  with {XMLNS} by ElementTree.

2009-01-03  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Don't fail when neither $HOME nor %USERPROFILE% is set.
	  (fixes #2483388)

2009-01-01  W. Tell  <w_tell -at- sourceforge>

	* S3/S3.py, S3/Utils.py: Use 'hashlib' instead of md5 and sha 
	  modules to avoid Python 2.6 warnings.

2008-12-31  Michal Ludvig  <michal@logix.cz>

	* Released version 0.9.9-pre4
	  ---------------------------

2008-12-31  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Reworked internal handling of unicode vs encoded filenames.
	  Should replace unknown characters with '?' instead of baling out.

2008-12-31  Michal Ludvig  <michal@logix.cz>

	* run-tests.py: Display system encoding in use.
	* s3cmd: Print a nice error message when --exclude-from
	  file is not readable.
	* S3/PkgInfo.py: Bumped up version to 0.9.9-pre4
	* S3/Exceptions.py: Added missing imports.
	* NEWS: Updated.
	* testsuite: reorganised UTF-8 files, added GBK encoding files,
	  moved encoding-specific files to 'tar.gz' archives, removed 
	  unicode dir.
	* run-tests.py: Adapted to the above change.
	* run-tests.sh: removed.
	* testsuite/exclude.encodings: Added.
	* run-tests.py: Don't assume utf-8, use preferred encoding 
	  instead.
	* s3cmd, S3/Utils.py, S3/Exceptions.py, S3/Progress.py,
	  S3/Config.py, S3/S3.py: Added --encoding switch and 
	  Config.encoding variable. Don't assume utf-8 for filesystem
	  and terminal output anymore.
	* s3cmd: Avoid ZeroDivisionError on fast links.
	* s3cmd: Unicodised all info() output.

2008-12-30  Michal Ludvig  <michal@logix.cz>

	* s3cmd: Replace unknown Unicode characters with '?'
	  to avoid UnicodeEncodeError's. Also make all output strings
	  unicode.