@@ -1,5 +1,9 @@
 2009-01-07  Michal Ludvig  <michal@logix.cz>
 
+	* S3/ACL.py: Keep ACL internally as a list of of 'Grantee' objects.
+
+2009-01-07  Michal Ludvig  <michal@logix.cz>
+
 	* S3/ACL.py: New object for handling ACL issues.
 	* S3/S3.py: Moved most of S3.get_acl() to ACL class.
 	* S3/Utils.py: Reworked XML helpers - remove XMLNS before 
